# log-management-dashboard

./: .env.example  .gitignore  DIRECTION.md  Makefile  README.md  docker-compose.yml  problem_statement.md
.claude/: settings.local.json
.planning/: KNOWLEDGE.md  PROJECT.md  REQUIREMENTS-ANALYSIS.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-database/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-core-api-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-log-management-ui/: 03-00-PLAN.md  03-00-SUMMARY.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UI-SPEC.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/03.1-improve-ux-for-log-filtering-color-severity-tags-loading-states-source-display/: 03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-VERIFICATION.md
.planning/phases/04-data-export/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/04.1-add-search-logic-in-backend/: 04.1-01-PLAN.md  04.1-01-SUMMARY.md  04.1-CONTEXT.md  04.1-RESEARCH.md  04.1-VALIDATION.md  04.1-VERIFICATION.md
.planning/phases/05-analytics-dashboard/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-UI-SPEC.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/05.1-re-design-analytics-dashboard-with-aggregated-data-filtering-and-trend-charts-in-datalog-like-style/: 05.1-01-PLAN.md  05.1-01-SUMMARY.md  05.1-CONTEXT.md  05.1-RESEARCH.md  05.1-VALIDATION.md  05.1-VERIFICATION.md
.planning/phases/05.1.1-implement-update-and-delete-crud-operations-add-put-patch-and-delete-endpoints-for-logs-with-frontend-detail-page-featuring-edit-and-delete-functionality/: 05.1.1-01-PLAN.md  05.1.1-01-SUMMARY.md  05.1.1-02-PLAN.md  05.1.1-02-SUMMARY.md
.planning/phases/05.3-migrate-create-log-form-to-modal-design-matching-edit-delete-pattern/: 05.3-01-PLAN.md  05.3-01-SUMMARY.md  05.3-CONTEXT.md  05.3-RESEARCH.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_logs_table.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py
backend/app/routers/: __init__.py  analytics.py  health.py  logs.py
backend/app/schemas/: __init__.py  analytics.py  logs.py
backend/app/utils/: __init__.py  cursor.py
backend/scripts/: __init__.py  seed.py
backend/tests/: __init__.py  conftest.py  test_analytics.py  test_config.py  test_cursor.py  test_export.py  test_health.py  test_logs_crud.py  test_logs_list.py  test_logs_performance.py  test_schemas.py
docs/: ARCHITECTURE.md  PROPOSED_STRUCTURE.md  README.md  TECHNOLOGY.md  TESTING.md  technical_spec.md
docs/api/: README.md  contract.md
docs/decisions/: 001-filter-reactivity-refactor.md  002-cursor-pagination.md  003-database-indexing.md  004-timezone-handling.md  005-frontend-architecture.md  README.md
docs/sql/: README.md  schema.md
docs/technical_spec/: README.md  technical_spec.md
frontend/: .dockerignore  Dockerfile  jest.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/__tests__/: setup.ts  smoke.test.tsx
(+71 files in other folders)
